# behavioral_Biometrics_authentication

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
data/: user_1_button_events.txt  user_1_keyboard_events.txt  user_1_orientation_events.txt  user_1_touch_events.txt  user_2_button_events.txt  user_2_keyboard_events.txt  user_2_orientation_events.txt  user_2_touch_events.txt
events_examples/: raw_accelerometer_event.txt  raw_touch_event.txt
src/: CMakeLists.txt
src/api_server/: CMakeLists.txt  api_server.cpp  api_server.h  main.cpp
src/api_server/routes/: authenticate_route.cpp  authenticate_route.h  main_route.cpp  main_route.h  users_data_route.cpp  users_data_route.h
src/authenticator/: CMakeLists.txt  authenticator.cpp  authenticator.h  main.cpp
src/data_gatherer/: CMakeLists.txt  adb.cpp  adb.h  adb_events_listener.cpp  adb_events_listener.h  file_logger.cpp  file_logger.h  keyboard_events_listener.cpp  keyboard_events_listener.h  main.cpp  orientation_events_listener.cpp  orientation_events_listener.h
src/data_parser/: CMakeLists.txt  data_parser.cpp  data_parser.h  main.cpp
src/data_parser/sources/: keyboard_parser.cpp  keyboard_parser.h  orientation_parser.cpp  orientation_parser.h
src/data_visualizer/: CMakeLists.txt  data_visualizer.cpp  data_visualizer.h  main.cpp
src/data_visualizer/lib/: matplotlibcpp.h
src/helpers/: CMakeLists.txt  file_logger.cpp  file_logger.h  strings_helpers.cpp  strings_helpers.h  utils.cpp  utils.h
test/: CMakeLists.txt  run_tests.cpp
test/data_parser_tests/: orientation_tests.cpp  orientation_tests.h
test/data_parser_tests/test_data/: keyboard_events.txt  orientation_events.txt
